# component-rpc

./: Cargo.toml  build-example-and-serve.sh  readme.md
examples/hello-rpc/: Cargo.toml  hello_rpc.wit
examples/hello-rpc/src/: lib.rs
src/: lib.rs  main.rs  openapi.rs  serde.rs  type_ext.rs
src/serde/: de.rs  ser.rs  tests.rs
