[package]
name = "component-rpc"
version = "0.1.0"
edition = "2021"
default-run = "component-rpc-server"

[dependencies]
anyhow = "1"
axum = "0.6"
base64 = "0.20"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
wit-component = { git = "https://github.com/bytecodealliance/wasm-tools" }
wit-parser = { git = "https://github.com/bytecodealliance/wasm-tools" }